# MathFinder

./: .gitignore  Makefile.am  NEWS  README  configure  configure.ac
project-isagoge-1.0/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  autogen.sh  config.h.in  configure  configure.ac
project-isagoge-1.0/data/: GroundTruth.dat~  GroundTruth_without_labels.dat~  equation_label_verify  equation_labeler  filenames  files_info  rename_pngs
project-isagoge-1.0/data/GroundTruths_With_Labels/advcalc1/: GT_advcalc1_with_labels.dat~
project-isagoge-1.0/data/GroundTruths_With_Labels/advcalc2/: GroundTruth_advcalc2_with_labels.dat~
project-isagoge-1.0/data/GroundTruths_With_Labels/de2de/: name_mapping~
project-isagoge-1.0/data/GroundTruths_Without_Labels/advcalc1/: GT_advcalc1_without_labels.dat~
project-isagoge-1.0/data/GroundTruths_Without_Labels/advcalc2/: GT_advcalc2_without_labels.dat~
project-isagoge-1.0/data/GroundTruths_Without_Labels/de2de/: GT_de2de_without_labels.dat~
project-isagoge-1.0/data/GroundTruths_Without_Labels/theophys/: GT_theophys_without_labels.dat~
project-isagoge-1.0/design/: .~lock.Design Document.odt#  Design Document.odt
project-isagoge-1.0/design/design_doc/: .~lock.Design Document.odt#  Design Document.odt
project-isagoge-1.0/final_results/MEDS4 Results/: MEDS4 Results
project-isagoge-1.0/final_results/Tesseract Results/: metrics
project-isagoge-1.0/log/: Thesis Project Log.odt
project-isagoge-1.0/log/notes/From Tesseract/: Tesseract Equation Detection Notes.odt  Tesseract Feature Recognition and Training Notes.odt  Tesseract Patent.odt
project-isagoge-1.0/small_group_test_images/input/google/: 1.TIFF  2.TIFF
project-isagoge-1.0/src/: Basic_Utils.h  BipartiteGraph.cpp  BipartiteGraph.h  DocumentLayoutTest.cpp  DocumentLayoutTest.h  EquationDetectorSVM.cpp  EquationDetectorSVM.h  IsagogeMain.cpp  Lept_Utils.cpp  Makefile.am  Makefile.in  README  TesseractDocumentation.h
project-isagoge-1.0/src/Data_Generation_Tools/: Makefile.am  Makefile.in  README  convert_pdfpages  removealpha  rename_pngs
project-isagoge-1.0/src/Data_Generation_Tools/Equation_Labeler/: README  qbuild
project-isagoge-1.0/src/Data_Generation_Tools/equation_label_verify/: main.cpp  qbuild
project-isagoge-1.0/src/Data_Generation_Tools/equation_labeler/: equation_labeler  moc_mainWindow.cpp  moc_pageTab.cpp  qbuild  qrc_icons.cpp
project-isagoge-1.0/src/Data_Generation_Tools/select_random/: Makefile.in
project-isagoge-1.0/src/Data_Generation_Tools/select_training/: Makefile.in
project-isagoge-1.0/src/Detection/: Detection.h  Detector.h  Makefile.am  Makefile.in  TrainerPredictor.h
project-isagoge-1.0/src/Detection/BinaryClassifier/: IBinaryClassifier.h  Makefile.am  Makefile.in  libSVM.cpp  libSVM.h
project-isagoge-1.0/src/Detection/FeatureExtractor/: F_Ext1.cpp  F_Ext1.h  IFeatureExtractor.h  Makefile.am  Makefile.in
project-isagoge-1.0/src/Detection/Sample/: GTParser.h  Makefile.am  Makefile.in  Sample.h
project-isagoge-1.0/src/Detection/TessInterface/: Makefile.am  Makefile.in  TessInterface.cpp  TessInterface.h
project-isagoge-1.0/src/Detection/Trainer/: CrossValidationSVM.h  ITrainer.h  Makefile.am  Makefile.in
project-isagoge-1.0/src/Evaluation/: BipartiteGraph.cpp  BipartiteGraph.h  DocumentLayoutTest.cpp  DocumentLayoutTest.h  Makefile.am  Makefile.in
project-isagoge-1.0/src/Grid/: BlobInfoGrid.cpp  BlobInfoGrid.h  M_Utils.cpp  M_Utils.h  Makefile.am  Makefile.in
project-isagoge-1.0/src/Groundtruth_Generation/: Makefile.in  README  convert_pdfpages
project-isagoge-1.0/src/Groundtruth_Generation/equation_label_verify/: Makefile  README  equation_label_verify  equation_label_verify.pro  main.cpp~  qbuild~
project-isagoge-1.0/src/Groundtruth_Generation/equation_labeler/: Makefile  README  equation_labeler.pro
project-isagoge-1.0/src/Groundtruth_Generation/select_random/: Makefile.in  README  main.cpp
project-isagoge-1.0/src/Groundtruth_Generation/select_training/: Makefile.in  main.cpp
project-isagoge-1.0/src/MEDS/: BlobInfoGrid.cpp  BlobInfoGrid.h  MEDS.cpp  MEDS.h  MEDS_Types.h  M_Utils.cpp  M_Utils.h  Makefile.am  Makefile.in
project-isagoge-1.0/src/MEDS/Detection/: Detection.h  Makefile.am  Makefile.in
project-isagoge-1.0/src/MEDS_Trainer/: MEDS_Trainer.h  Makefile.am  Makefile.in
project-isagoge-1.0/src/Page_Selection_Tools/: Makefile.am  Makefile.in  README
project-isagoge-1.0/src/Page_Selection_Tools/select_random/: Makefile.in  README
project-isagoge-1.0/src/Page_Selection_Tools/select_training/: Makefile.am  Makefile.in
project-isagoge-1.0/src/Segmentation/: ISegmentor.h  Makefile.am  Makefile.in  Segmentation.h  Segmentor1.cpp  Segmentor1.h
project-isagoge-1.0/src/Tesseract/: Makefile.in  aclocal.m4  configure
project-isagoge-1.0/src/Tesseract/api/: Makefile.in  baseapi.cpp  baseapi.h
project-isagoge-1.0/src/Tesseract/ccmain/: Makefile.am  Makefile.in  equationdetect.cpp  equationdetect.h  equationdetectbase.cpp  equationdetectbase.h  tesseractclass.h
project-isagoge-1.0/src/Tesseract/ccstruct/: Makefile.in  ocrrow.h
project-isagoge-1.0/src/Tesseract/ccutil/: Makefile.in
project-isagoge-1.0/src/Tesseract/classify/: Makefile.in
project-isagoge-1.0/src/Tesseract/cube/: Makefile.in
project-isagoge-1.0/src/Tesseract/cutil/: Makefile.in
project-isagoge-1.0/src/Tesseract/dict/: Makefile.in  dict.cpp
project-isagoge-1.0/src/Tesseract/doc/: Doxyfile  (+2 more)
project-isagoge-1.0/src/Utils/: Basic_Utils.cpp  Basic_Utils.h  Lept_Utils.cpp  Lept_Utils.h  Makefile.am  Makefile.in
project-isagoge-1.0/src/dlib-18.4/: Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure.ac  license.html
project-isagoge-1.0/test_sets/: grab_dbg_imgs  rename_pngs  rename_pngs~
project-isagoge-1.0/test_sets/output/: metric_format
project-isagoge-1.0/test_sets/results_format/: metric_format_verbose
project-isagoge-1.0/test_sets/training/: mathwords  mathwords~  separatorwords  stopwords
src/FINDER/APP/: Makefile.am  Makefile.in
src/FINDER/COMMON/: Makefile.am  Makefile.in  configure.ac
(+5228 files in other folders)
