#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([Project Isagoge], [1.0], [jrbruce86@gmail.com])
AM_INIT_AUTOMAKE
LT_INIT #libtool

# Make files and scripts
AC_CONFIG_FILES([Makefile
                dlib/Makefile
                dlib/any/Makefile
                dlib/array/Makefile
                dlib/array2d/Makefile
                dlib/base64/Makefile
                dlib/bayes_utils/Makefile
                dlib/bigint/Makefile
                dlib/binary_search_tree/Makefile
                dlib/bit_stream/Makefile
                dlib/bound_function_pointer/Makefile
                dlib/bridge/Makefile
                dlib/byte_orderer/Makefile
                dlib/bsp/Makefile
                dlib/clustering/Makefile
                dlib/cmd_line_parser/Makefile
                dlib/compress_stream/Makefile
                dlib/conditioning_class/Makefile
                dlib/config_reader/Makefile
                dlib/cpp_pretty_printer/Makefile
                dlib/cpp_tokenizer/Makefile
                dlib/crc32/Makefile
                dlib/data_io/Makefile
                dlib/directed_graph/Makefile
                dlib/dir_nav/Makefile
                dlib/disjoint_subsets/Makefile
                dlib/entropy_decoder/Makefile
                dlib/entropy_decoder_model/Makefile
                dlib/entropy_encoder/Makefile
                dlib/entropy_encoder_model/Makefile
                dlib/filtering/Makefile
                dlib/general_hash/Makefile
                dlib/geometry/Makefile
                dlib/graph/Makefile
                dlib/graph_cuts/Makefile
                dlib/graph_utils/Makefile
                dlib/hash_map/Makefile
                dlib/hash_set/Makefile
                dlib/hash_table/Makefile
                dlib/http_client/Makefile
                dlib/image_keypoint/Makefile
                dlib/image_loader/Makefile
                dlib/image_processing/Makefile
                dlib/image_saver/Makefile
                dlib/image_transforms/Makefile
                dlib/interfaces/Makefile
                dlib/iosockstream/Makefile
                dlib/linker/Makefile
                dlib/logger/Makefile
                dlib/lsh/Makefile
                dlib/lz77_buffer/Makefile
                dlib/lzp_buffer/Makefile
                dlib/manifold_regularization/Makefile
                dlib/map/Makefile
                dlib/matrix/Makefile
                dlib/matrix/lapack/Makefile
                dlib/md5/Makefile
                dlib/member_function_pointer/Makefile
                dlib/memory_manager/Makefile
                dlib/memory_manager_global/Makefile
                dlib/memory_manager_stateless/Makefile
                dlib/misc_api/Makefile
                dlib/mlp/Makefile
                dlib/numerical_integration/Makefile
                dlib/opencv/Makefile
                dlib/optimization/Makefile
                dlib/pipe/Makefile
                dlib/quantum_computing/Makefile
                dlib/queue/Makefile
                dlib/rand/Makefile
                dlib/reference_counter/Makefile
                dlib/sequence/Makefile
                dlib/server/Makefile
                dlib/set/Makefile
                dlib/set_utils/Makefile      
                dlib/sliding_buffer/Makefile
                dlib/smart_pointers/Makefile
                dlib/sockets/Makefile
                dlib/sockstreambuf/Makefile
                dlib/sqlite/Makefile
                dlib/stack/Makefile
                dlib/stack_trace/Makefile
                dlib/static_map/Makefile
                dlib/static_set/Makefile
                dlib/statistics/Makefile
                dlib/stl_checked/Makefile
                dlib/string/Makefile
                dlib/svm/Makefile
                dlib/sync_extension/Makefile
                dlib/threads/Makefile
                dlib/timeout/Makefile
                dlib/timer/Makefile
                dlib/tokenizer/Makefile
                dlib/tuple/Makefile
                dlib/type_safe_union/Makefile
                dlib/unicode/Makefile
                dlib/vectorstream/Makefile
                dlib/xml_parser/Makefile
                examples/Makefile])

AC_CONFIG_SRCDIR([dlib/svm/kkmeans.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

AC_OUTPUT
